fixed pagination not showing

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -47,7 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 15px;
+    margin-bottom: 85px;
 }
 
 .pagination__container .pagination-button--next,
